# ChanSense

./: .gitignore  Hospital_inspection_system.pth  LICENSE  README.md  best_optimized_cnn.pth
.github/workflows/: build-action.yml
model/: pyproject.toml
model/muti-model/: model_comparison_report.md
sd_model_template/: best_optimized_cnn.espdl  best_optimized_cnn.meta.json  readme.md
sdcard_models/: Hospital_inspection_system.espdl  Hospital_inspection_system.info  Hospital_inspection_system.json  Hospital_inspection_system.meta.json  Hospital_inspection_system.onnx  best_optimized_cnn.info  best_optimized_cnn.json  best_optimized_cnn.onnx
src/fireware-code/csi-receiver/main/: CMakeLists.txt  idf_component.yml  main.c
src/fireware-code/csi-recv-end/: CMakeLists.txt
src/fireware-code/csi-recv-end/main/: main.c
src/fireware-code/motion-inference/: CMakeLists.txt  sdkconfig
src/fireware-code/motion-inference/main/: CMakeLists.txt  p4_uart.c
src/firmware-code/p4_remote_wifi/: sdkconfig  sdkconfig.old
src/firmware-code/p4_remote_wifi/main/: CMakeLists.txt  Kconfig.projbuild  csi_dsp.cpp  csi_dsp.h  csi_receiver.c  csi_receiver.h  csi_source.c  csi_source.h  extension_specification.md  gesture_detector.c  gesture_detector.h  gesture_output.c  gesture_output.h  main.c  model2_data.c  model2_data.h  model_data.c  motion_detector.c  motion_detector.h  nn_model.cpp  nn_model.h  output_dispatcher.c  output_dispatcher.h  sys_config.c  sys_config.h  test_model.c  ui_controller.c  ui_controller.h  upload_api.c  upload_api.h  walkthrough.md  wifi_manager.c
(+3 files in other folders)
